--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1999-07-07  Ulrich Drepper  <drepper@cygnus.com>
 
-	* malloc/malloc.c (request2size): Also set errno of failing.
+	* sysdeps/generic/setenv.c: Describe problem.
+
+	* malloc/malloc.c (request2size): Also set errno if failing.
 
 	* malloc/malloc.c (request2size): Take care of overflow in
 	addition.
