--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+1999-07-08  Andreas Schwab  <schwab@suse.de>
+
+	* libio/iofopncook.c (fopencookie): Set _fileno to -2.
+
+	* libio/libioP.h (_IO_file_is_open): Only check for -1, not all
+	negative numbers.
+
+	* libio/fileops.c (_IO_new_file_close_it): Set _fileno to -1, not
+	EOF.
+	* libio/oldfileops.c (_IO_old_file_close_it): Likewise.
+
+1999-07-08  Andreas Schwab  <schwab@suse.de>
+
+	* stdio-common/vfprintf.c (buffered_vfprintf): Initialize _mode.
+
+1999-07-08  Andreas Schwab  <schwab@suse.de>
+
+	* libio/fileno.c: Return -1 instead of EOF and set errno if the
+	stream is not a real file stream.
+
+1999-07-08  Andreas Schwab  <schwab@suse.de>
+
+	* manual/charset.texi: Fix typos.
+
 1999-07-07  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/gnu/Makefile (libdl-routines): Add eval.
