--- a/ChangeLog
+++ b/ChangeLog
@@ -51,167 +51,167 @@
 	of carries. Optimize.
 
 	* sysdeps/libm-ieee754/e_exp10.c: Moved to ...
-	* math/e_exp10.c: ...here.
+	* sysdeps/generic/e_exp10.c: ...here.
 	* sysdeps/libm-ieee754/e_exp10f.c: Moved to ...
-	* math/e_exp10f.c: ...here.
+	* sysdeps/generic/e_exp10f.c: ...here.
 	* sysdeps/libm-ieee754/e_exp10l.c: Moved to ...
-	* math/e_exp10l.c: ...here.
+	* sysdeps/generic/e_exp10l.c: ...here.
 	* sysdeps/libm-ieee754/e_scalb.c: Moved to ...
-	* math/e_scalb.c: ...here.
+	* sysdeps/generic/e_scalb.c: ...here.
 	* sysdeps/libm-ieee754/e_scalbf.c: Moved to ...
-	* math/e_scalbf.c: ...here.
+	* sysdeps/generic/e_scalbf.c: ...here.
 	* sysdeps/libm-ieee754/e_scalbl.c: Moved to ...
-	* math/e_scalbl.c: ...here.
+	* sysdeps/generic/e_scalbl.c: ...here.
 	* sysdeps/libm-ieee754/s_cacos.c: Moved to ...
-	* math/s_cacos.c: ...here.
+	* sysdeps/generic/s_cacos.c: ...here.
 	* sysdeps/libm-ieee754/s_cacosf.c: Moved to ...
-	* math/s_cacosf.c: ...here.
+	* sysdeps/generic/s_cacosf.c: ...here.
 	* sysdeps/libm-ieee754/s_cacosh.c: Moved to ...
-	* math/s_cacosh.c: ...here.
+	* sysdeps/generic/s_cacosh.c: ...here.
 	* sysdeps/libm-ieee754/s_cacoshf.c: Moved to ...
-	* math/s_cacoshf.c: ...here.
+	* sysdeps/generic/s_cacoshf.c: ...here.
 	* sysdeps/libm-ieee754/s_cacoshl.c: Moved to ...
-	* math/s_cacoshl.c: ...here.
+	* sysdeps/generic/s_cacoshl.c: ...here.
 	* sysdeps/libm-ieee754/s_cacosl.c: Moved to ...
-	* math/s_cacosl.c: ...here.
+	* sysdeps/generic/s_cacosl.c: ...here.
 	* sysdeps/libm-ieee754/s_casin.c: Moved to ...
-	* math/s_casin.c: ...here.
+	* sysdeps/generic/s_casin.c: ...here.
 	* sysdeps/libm-ieee754/s_casinf.c: Moved to ...
-	* math/s_casinf.c: ...here.
+	* sysdeps/generic/s_casinf.c: ...here.
 	* sysdeps/libm-ieee754/s_casinh.c: Moved to ...
-	* math/s_casinh.c: ...here.
+	* sysdeps/generic/s_casinh.c: ...here.
 	* sysdeps/libm-ieee754/s_casinhf.c: Moved to ...
-	* math/s_casinhf.c: ...here.
+	* sysdeps/generic/s_casinhf.c: ...here.
 	* sysdeps/libm-ieee754/s_casinhl.c: Moved to ...
-	* math/s_casinhl.c: ...here.
+	* sysdeps/generic/s_casinhl.c: ...here.
 	* sysdeps/libm-ieee754/s_casinl.c: Moved to ...
-	* math/s_casinl.c: ...here.
+	* sysdeps/generic/s_casinl.c: ...here.
 	* sysdeps/libm-ieee754/s_catan.c: Moved to ...
-	* math/s_catan.c: ...here.
+	* sysdeps/generic/s_catan.c: ...here.
 	* sysdeps/libm-ieee754/s_catanf.c: Moved to ...
-	* math/s_catanf.c: ...here.
+	* sysdeps/generic/s_catanf.c: ...here.
 	* sysdeps/libm-ieee754/s_catanh.c: Moved to ...
-	* math/s_catanh.c: ...here.
+	* sysdeps/generic/s_catanh.c: ...here.
 	* sysdeps/libm-ieee754/s_catanhf.c: Moved to ...
-	* math/s_catanhf.c: ...here.
+	* sysdeps/generic/s_catanhf.c: ...here.
 	* sysdeps/libm-ieee754/s_catanhl.c: Moved to ...
-	* math/s_catanhl.c: ...here.
+	* sysdeps/generic/s_catanhl.c: ...here.
 	* sysdeps/libm-ieee754/s_catanl.c: Moved to ...
-	* math/s_catanl.c: ...here.
+	* sysdeps/generic/s_catanl.c: ...here.
 	* sysdeps/libm-ieee754/s_ccos.c: Moved to ...
-	* math/s_ccos.c: ...here.
+	* sysdeps/generic/s_ccos.c: ...here.
 	* sysdeps/libm-ieee754/s_ccosf.c: Moved to ...
-	* math/s_ccosf.c: ...here.
+	* sysdeps/generic/s_ccosf.c: ...here.
 	* sysdeps/libm-ieee754/s_ccosh.c: Moved to ...
-	* math/s_ccosh.c: ...here.
+	* sysdeps/generic/s_ccosh.c: ...here.
 	* sysdeps/libm-ieee754/s_ccoshf.c: Moved to ...
-	* math/s_ccoshf.c: ...here.
+	* sysdeps/generic/s_ccoshf.c: ...here.
 	* sysdeps/libm-ieee754/s_ccoshl.c: Moved to ...
-	* math/s_ccoshl.c: ...here.
+	* sysdeps/generic/s_ccoshl.c: ...here.
 	* sysdeps/libm-ieee754/s_ccosl.c: Moved to ...
-	* math/s_ccosl.c: ...here.
+	* sysdeps/generic/s_ccosl.c: ...here.
 	* sysdeps/libm-ieee754/s_cexp.c: Moved to ...
-	* math/s_cexp.c: ...here.
+	* sysdeps/generic/s_cexp.c: ...here.
 	* sysdeps/libm-ieee754/s_cexpf.c: Moved to ...
-	* math/s_cexpf.c: ...here.
+	* sysdeps/generic/s_cexpf.c: ...here.
 	* sysdeps/libm-ieee754/s_cexpl.c: Moved to ...
-	* math/s_cexpl.c: ...here.
+	* sysdeps/generic/s_cexpl.c: ...here.
 	* sysdeps/libm-ieee754/s_clog.c: Moved to ...
-	* math/s_clog.c: ...here.
+	* sysdeps/generic/s_clog.c: ...here.
 	* sysdeps/libm-ieee754/s_clog10.c: Moved to ...
-	* math/s_clog10.c: ...here.
+	* sysdeps/generic/s_clog10.c: ...here.
 	* sysdeps/libm-ieee754/s_clog10f.c: Moved to ...
-	* math/s_clog10f.c: ...here.
+	* sysdeps/generic/s_clog10f.c: ...here.
 	* sysdeps/libm-ieee754/s_clog10l.c: Moved to ...
-	* math/s_clog10l.c: ...here.
+	* sysdeps/generic/s_clog10l.c: ...here.
 	* sysdeps/libm-ieee754/s_clogf.c: Moved to ...
-	* math/s_clogf.c: ...here.
+	* sysdeps/generic/s_clogf.c: ...here.
 	* sysdeps/libm-ieee754/s_clogl.c: Moved to ...
-	* math/s_clogl.c: ...here.
+	* sysdeps/generic/s_clogl.c: ...here.
 	* sysdeps/libm-ieee754/s_cpow.c: Moved to ...
-	* math/s_cpow.c: ...here.
+	* sysdeps/generic/s_cpow.c: ...here.
 	* sysdeps/libm-ieee754/s_cpowf.c: Moved to ...
-	* math/s_cpowf.c: ...here.
+	* sysdeps/generic/s_cpowf.c: ...here.
 	* sysdeps/libm-ieee754/s_cpowl.c: Moved to ...
-	* math/s_cpowl.c: ...here.
+	* sysdeps/generic/s_cpowl.c: ...here.
 	* sysdeps/libm-ieee754/s_cproj.c: Moved to ...
-	* math/s_cproj.c: ...here.
+	* sysdeps/generic/s_cproj.c: ...here.
 	* sysdeps/libm-ieee754/s_cprojf.c: Moved to ...
-	* math/s_cprojf.c: ...here.
+	* sysdeps/generic/s_cprojf.c: ...here.
 	* sysdeps/libm-ieee754/s_cprojl.c: Moved to ...
-	* math/s_cprojl.c: ...here.
+	* sysdeps/generic/s_cprojl.c: ...here.
 	* sysdeps/libm-ieee754/s_csin.c: Moved to ...
-	* math/s_csin.c: ...here.
+	* sysdeps/generic/s_csin.c: ...here.
 	* sysdeps/libm-ieee754/s_csinf.c: Moved to ...
-	* math/s_csinf.c: ...here.
+	* sysdeps/generic/s_csinf.c: ...here.
 	* sysdeps/libm-ieee754/s_csinh.c: Moved to ...
-	* math/s_csinh.c: ...here.
+	* sysdeps/generic/s_csinh.c: ...here.
 	* sysdeps/libm-ieee754/s_csinhf.c: Moved to ...
-	* math/s_csinhf.c: ...here.
+	* sysdeps/generic/s_csinhf.c: ...here.
 	* sysdeps/libm-ieee754/s_csinhl.c: Moved to ...
-	* math/s_csinhl.c: ...here.
+	* sysdeps/generic/s_csinhl.c: ...here.
 	* sysdeps/libm-ieee754/s_csinl.c: Moved to ...
-	* math/s_csinl.c: ...here.
+	* sysdeps/generic/s_csinl.c: ...here.
 	* sysdeps/libm-ieee754/s_csqrt.c: Moved to ...
-	* math/s_csqrt.c: ...here.
+	* sysdeps/generic/s_csqrt.c: ...here.
 	* sysdeps/libm-ieee754/s_csqrtf.c: Moved to ...
-	* math/s_csqrtf.c: ...here.
+	* sysdeps/generic/s_csqrtf.c: ...here.
 	* sysdeps/libm-ieee754/s_csqrtl.c: Moved to ...
-	* math/s_csqrtl.c: ...here.
+	* sysdeps/generic/s_csqrtl.c: ...here.
 	* sysdeps/libm-ieee754/s_ctan.c: Moved to ...
-	* math/s_ctan.c: ...here.
+	* sysdeps/generic/s_ctan.c: ...here.
 	* sysdeps/libm-ieee754/s_ctanf.c: Moved to ...
-	* math/s_ctanf.c: ...here.
+	* sysdeps/generic/s_ctanf.c: ...here.
 	* sysdeps/libm-ieee754/s_ctanh.c: Moved to ...
-	* math/s_ctanh.c: ...here.
+	* sysdeps/generic/s_ctanh.c: ...here.
 	* sysdeps/libm-ieee754/s_ctanhf.c: Moved to ...
-	* math/s_ctanhf.c: ...here.
+	* sysdeps/generic/s_ctanhf.c: ...here.
 	* sysdeps/libm-ieee754/s_ctanhl.c: Moved to ...
-	* math/s_ctanhl.c: ...here.
+	* sysdeps/generic/s_ctanhl.c: ...here.
 	* sysdeps/libm-ieee754/s_ctanl.c: Moved to ...
-	* math/s_ctanl.c: ...here.
+	* sysdeps/generic/s_ctanl.c: ...here.
 	* sysdeps/libm-ieee754/s_fdim.c: Moved to ...
-	* math/s_fdim.c: ...here.
+	* sysdeps/generic/s_fdim.c: ...here.
 	* sysdeps/libm-ieee754/s_fdimf.c: Moved to ...
-	* math/s_fdimf.c: ...here.
+	* sysdeps/generic/s_fdimf.c: ...here.
 	* sysdeps/libm-ieee754/s_fdiml.c: Moved to ...
-	* math/s_fdiml.c: ...here.
+	* sysdeps/generic/s_fdiml.c: ...here.
 	* sysdeps/libm-ieee754/s_fma.c: Moved to ...
-	* math/s_fma.c: ...here.
+	* sysdeps/generic/s_fma.c: ...here.
 	* sysdeps/libm-ieee754/s_fmaf.c: Moved to ...
-	* math/s_fmaf.c: ...here.
+	* sysdeps/generic/s_fmaf.c: ...here.
 	* sysdeps/libm-ieee754/s_fmal.c: Moved to ...
-	* math/s_fmal.c: ...here.
+	* sysdeps/generic/s_fmal.c: ...here.
 	* sysdeps/libm-ieee754/s_fmax.c: Moved to ...
-	* math/s_fmax.c: ...here.
+	* sysdeps/generic/s_fmax.c: ...here.
 	* sysdeps/libm-ieee754/s_fmaxf.c: Moved to ...
-	* math/s_fmaxf.c: ...here.
+	* sysdeps/generic/s_fmaxf.c: ...here.
 	* sysdeps/libm-ieee754/s_fmaxl.c: Moved to ...
-	* math/s_fmaxl.c: ...here.
+	* sysdeps/generic/s_fmaxl.c: ...here.
 	* sysdeps/libm-ieee754/s_fmin.c: Moved to ...
-	* math/s_fmin.c: ...here.
+	* sysdeps/generic/s_fmin.c: ...here.
 	* sysdeps/libm-ieee754/s_fminf.c: Moved to ...
-	* math/s_fminf.c: ...here.
+	* sysdeps/generic/s_fminf.c: ...here.
 	* sysdeps/libm-ieee754/s_fminl.c: Moved to ...
-	* math/s_fminl.c: ...here.
+	* sysdeps/generic/s_fminl.c: ...here.
 	* sysdeps/libm-ieee754/s_ldexp.c: Moved to ...
-	* math/s_ldexp.c: ...here.
+	* sysdeps/generic/s_ldexp.c: ...here.
 	* sysdeps/libm-ieee754/s_ldexpf.c: Moved to ...
-	* math/s_ldexpf.c: ...here.
+	* sysdeps/generic/s_ldexpf.c: ...here.
 	* sysdeps/libm-ieee754/s_ldexpl.c: Moved to ...
-	* math/s_ldexpl.c: ...here.
+	* sysdeps/generic/s_ldexpl.c: ...here.
 	* sysdeps/libm-ieee754/s_nan.c: Moved to ...
-	* math/s_nan.c: ...here.
+	* sysdeps/generic/s_nan.c: ...here.
 	* sysdeps/libm-ieee754/s_nanf.c: Moved to ...
-	* math/s_nanf.c: ...here.
+	* sysdeps/generic/s_nanf.c: ...here.
 	* sysdeps/libm-ieee754/s_nanl.c: Moved to ...
-	* math/s_nanl.c: ...here.
+	* sysdeps/generic/s_nanl.c: ...here.
 	* sysdeps/libm-ieee754/s_significand.c: Moved to ...
-	* math/s_significand.c: ...here.
+	* sysdeps/generic/s_significand.c: ...here.
 	* sysdeps/libm-ieee754/s_significandf.c: Moved to ...
-	* math/s_significandf.c: ...here.
+	* sysdeps/generic/s_significandf.c: ...here.
 	* sysdeps/libm-ieee754/s_significandl.c: Moved to ...
-	* math/s_significandl.c: ...here.
+	* sysdeps/generic/s_significandl.c: ...here.
 	Avoid conversion from int to double and then to long double.
 	* sysdeps/libm-ieee754/w_acos.c: Moved to ...
 	* math/w_acos.c: ...here.
@@ -1062,19 +1062,11 @@
 	* sysdeps/ieee754/dbl-64/Dist: ...this and ...
 	* sysdeps/ieee754/flt-32/Dist: ...this file.
 
-	* sysdeps/ieee754/flt-32/Implies: New file.
-	* sysdeps/ieee754/dbl-64/Implies: New file.
-	* sysdeps/ieee754/dbl-64/math_ldbl.h: New file.
 	* sysdeps/ieee754/dbl-64/s_nexttoward.c: New file.
-	* sysdeps/ieee754/dbl-64/s_nexttowardf.c: New file.
-	* sysdeps/ieee754/dbl-64/strtold.c: New file.
 	* sysdeps/ieee754/dbl-64/mpn2ldbl.c: New file.
-	* sysdeps/ieee754/dbl-64/ldbl2mpn.c: New file.
-	* sysdeps/ieee754/ldbl-96/Implies: New file.
 	* sysdeps/ieee754/ldbl-96/math_ldbl.h: New file.
 	* sysdeps/ieee754/ldbl-96/strtold.c: New file.
 	* sysdeps/ieee754/ldbl-96/printf_fphex.c: New file.
-	* sysdeps/ieee754/ldbl-128/Implies: New file.
 	* sysdeps/ieee754/ldbl-128/s_sinl.c: New file.
 	* sysdeps/ieee754/ldbl-128/s_ceill.c: New file.
 	* sysdeps/ieee754/ldbl-128/e_remainderl.c: New file.
@@ -1117,6 +1109,11 @@
 	* sysdeps/ieee754/ldbl-128/printf_fphex.c: New file.
 	* sysdeps/ieee754/ldbl-128/mpn2ldbl.c: New file.
 	* sysdeps/ieee754/ldbl-128/ldbl2mpn.c: New file.
+
+	* sysdeps/generic/math_ldbl.h: New file.
+	* sysdeps/generic/s_nexttowardf.c: New file.
+	* sysdeps/generic/strtold.c: New file.
+	* sysdeps/generic/ldbl2mpn.c: New file.
 
 	* math/machine/endian.h: Remove.
 	* sysdeps/i386/fpu/Implies: Remove.
