--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-14  Andreas Schwab  <schwab@suse.de>
+
+	* Makerules (common-generated): Don't prepend $(common-objpfx).
+
 1999-07-12  Jakub Jelinek  <jj@ultra.linux.cz>
 
 	* stdio-common/printf_fp.c (__printf_fp): Adjust for IEEE quad
