--- a/manual/string.texi
+++ b/manual/string.texi
@@ -1331,18 +1331,19 @@ which support multi-threading.
 @comment string.h
 @comment BSD
 @deftypefun {char *} strsep (char **@var{string_ptr}, const char *@var{delimiter})
-This function is just @code{strtok_r} with the @var{newstring} argument
-replaced by the @var{save_ptr} argument.  The initialization of the
-moving pointer has to be done by the user.  Successive calls to
-@code{strsep} move the pointer along the tokens separated by
-@var{delimiter}, returning the address of the next token and updating
-@var{string_ptr} to point to the beginning of the next token.
+This function has a similar functionality as @code{strtok_r} with the
+@var{newstring} argument replaced by the @var{save_ptr} argument.  The
+initialization of the moving pointer has to be done by the user.
+Successive calls to @code{strsep} move the pointer along the tokens
+separated by @var{delimiter}, returning the address of the next token
+and updating @var{string_ptr} to point to the beginning of the next
+token.
 
-If the input string contains more than one character from
-@var{delimiter} in a row @code{strsep} returns an empty string for each
-pair of characters from @var{delimiter}.  This means that a program
-normally should test for @code{strsep} returning an empty string before
-processing it.
+One difference between @code{strsep} and @code{strtok_r} is that if the
+input string contains more than one character from @var{delimiter} in a
+row @code{strsep} returns an empty string for each pair of characters
+from @var{delimiter}.  This means that a program normally should test
+for @code{strsep} returning an empty string before processing it.
 
 This function was introduced in 4.3BSD and therefore is widely available.
 @end deftypefun
