--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-07-15  Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/fnmatch.h: Use __name instead of __string in prototype to
+	allow use outside glibc.
+
 1999-07-14  Ulrich Drepper  <drepper@cygnus.com>
 
 	* time/tst-strptime.c (main): Add one more test case.  Produce
