--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-15  Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/unistd.h: Use __PMT for exit.
+
 1999-07-15  Philip Blundell  <pb@nexus.co.uk>
 
 	* sysdeps/unix/sysv/linux/arm/Versions (_inb, _inw, _inl, _outb,
