--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,16 @@
 
 	* sysdeps/unix/sysv/linux/bits/time.h (timeval): Use __suseconds_t
 	type for tv_usec element.
+	* sysdeps/unix/sysv/linux/alpha/bits/time.h: Likewise
 	* sysdeps/unix/sysv/linux/bits/types.h: Define __suseconds_t.
+	* sysdeps/generic/bits/time.h: Likewise.
+	* sysdeps/mach/hurd/bits/time.h: Likewise.
 	* sysdeps/unix/sysv/linux/alpha/bits/types.h: Likewise.
 	* sysdeps/unix/sysv/linux/mips/bits/types.h: Likewise.
 	* sysdeps/unix/sysv/linux/sparc/bits/types.h: Likewise.
+	* sysdeps/unix/sysv/sysv4/solaris2/bits/types.h: Likewise.
+	* sysdeps/generic/bits/types.h: Likewise.
+	* posix/sys/types.h: Define suseconds_t for X/Open.
 
 1999-07-15  Ulrich Drepper  <drepper@cygnus.com>
 
